fix: zoom no-meeting responsive, spotlight progress complete btn on mobile devices, datepicker focus primary color, buddybos icon size-spacing issue

--- a/assets/scss/front/course-spotlight/spotlight.scss
+++ b/assets/scss/front/course-spotlight/spotlight.scss
@@ -257,6 +257,11 @@
 				text-align: right;
 			}
 		}
+		@include breakpoint-max(420) {
+			.tutor-topbar-complete-btn.tutor-ml-24 {
+				margin-left: 0 !important;
+			}
+		}
 		[class*='tutor-icon-'] {
 			display: none;
 		}
